--- a/app/assets/stylesheets/10_checkout.scss
+++ b/app/assets/stylesheets/10_checkout.scss
@@ -99,7 +99,7 @@
 .checkout-summary-container {
   flex: 1 1 0;
   min-width: 270px;
-  height: 300px;
+  height: 320px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
